--- a/.classpath
+++ b/.classpath
@@ -5,6 +5,9 @@
   <classpathentry kind="src" path="src/main/resources" excluding="**/*.java|**/application*.yml|**/application*.yaml|**/application*.properties"/>
   <classpathentry kind="output" path="target/classes"/>
   <classpathentry kind="var" path="M2_REPO/javax/annotation/javax.annotation-api/1.3.2/javax.annotation-api-1.3.2.jar"/>
+  <classpathentry kind="var" path="M2_REPO/javax/persistence/javax.persistence-api/2.2/javax.persistence-api-2.2.jar"/>
+  <classpathentry kind="var" path="M2_REPO/javax/activation/javax.activation-api/1.2.0/javax.activation-api-1.2.0.jar"/>
+  <classpathentry kind="var" path="M2_REPO/javax/transaction/javax.transaction-api/1.3/javax.transaction-api-1.3.jar"/>
   <classpathentry kind="var" path="M2_REPO/javax/validation/validation-api/2.0.1.Final/validation-api-2.0.1.Final.jar"/>
   <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
   <classpathentry kind="var" path="M2_REPO/org/springframework/boot/spring-boot-starter/2.1.0.M1/spring-boot-starter-2.1.0.M1.jar"/>
@@ -24,18 +27,48 @@
   <classpathentry kind="var" path="M2_REPO/org/apache/logging/log4j/log4j-api/2.11.0/log4j-api-2.11.0.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/slf4j/jul-to-slf4j/1.7.25/jul-to-slf4j-1.7.25.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/yaml/snakeyaml/1.21/snakeyaml-1.21.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/springframework/data/spring-data-couchbase/3.1.0.RC1/spring-data-couchbase-3.1.0.RC1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/springframework/spring-web/5.1.0.RC1/spring-web-5.1.0.RC1.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/springframework/boot/spring-boot-starter-data-jpa/2.1.0.M1/spring-boot-starter-data-jpa-2.1.0.M1.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/springframework/boot/spring-boot-starter-aop/2.1.0.M1/spring-boot-starter-aop-2.1.0.M1.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/aspectj/aspectjweaver/1.9.1/aspectjweaver-1.9.1.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/springframework/boot/spring-boot-starter-jdbc/2.1.0.M1/spring-boot-starter-jdbc-2.1.0.M1.jar"/>
+  <classpathentry kind="var" path="M2_REPO/com/zaxxer/HikariCP/3.2.0/HikariCP-3.2.0.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/springframework/spring-jdbc/5.1.0.RC1/spring-jdbc-5.1.0.RC1.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/springframework/spring-tx/5.1.0.RC1/spring-tx-5.1.0.RC1.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/hibernate/hibernate-core/5.3.3.Final/hibernate-core-5.3.3.Final.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/jboss/logging/jboss-logging/3.3.2.Final/jboss-logging-3.3.2.Final.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/javassist/javassist/3.23.1-GA/javassist-3.23.1-GA.jar"/>
+  <classpathentry kind="var" path="M2_REPO/net/bytebuddy/byte-buddy/1.8.13/byte-buddy-1.8.13.jar"/>
+  <classpathentry kind="var" path="M2_REPO/antlr/antlr/2.7.7/antlr-2.7.7.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/jboss/jandex/2.0.5.Final/jandex-2.0.5.Final.jar"/>
+  <classpathentry kind="var" path="M2_REPO/com/fasterxml/classmate/1.3.4/classmate-1.3.4.jar"/>
+  <classpathentry kind="var" path="M2_REPO/dom4j/dom4j/1.6.1/dom4j-1.6.1.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/hibernate/common/hibernate-commons-annotations/5.0.4.Final/hibernate-commons-annotations-5.0.4.Final.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/springframework/data/spring-data-jpa/2.1.0.RC1/spring-data-jpa-2.1.0.RC1.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/springframework/data/spring-data-commons/2.1.0.RC1/spring-data-commons-2.1.0.RC1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/com/couchbase/client/java-client/2.6.0/java-client-2.6.0.jar"/>
-  <classpathentry kind="var" path="M2_REPO/com/couchbase/client/core-io/1.6.0/core-io-1.6.0.jar"/>
-  <classpathentry kind="var" path="M2_REPO/io/reactivex/rxjava/1.3.8/rxjava-1.3.8.jar"/>
-  <classpathentry kind="var" path="M2_REPO/io/opentracing/opentracing-api/0.31.0/opentracing-api-0.31.0.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/springframework/spring-orm/5.1.0.RC1/spring-orm-5.1.0.RC1.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/springframework/spring-aspects/5.1.0.RC1/spring-aspects-5.1.0.RC1.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/springframework/boot/spring-boot-starter-data-rest/2.1.0.M1/spring-boot-starter-data-rest-2.1.0.M1.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/springframework/boot/spring-boot-starter-json/2.1.0.M1/spring-boot-starter-json-2.1.0.M1.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/springframework/spring-web/5.1.0.RC1/spring-web-5.1.0.RC1.jar"/>
   <classpathentry kind="var" path="M2_REPO/com/fasterxml/jackson/core/jackson-databind/2.9.6/jackson-databind-2.9.6.jar"/>
   <classpathentry kind="var" path="M2_REPO/com/fasterxml/jackson/core/jackson-annotations/2.9.0/jackson-annotations-2.9.0.jar"/>
   <classpathentry kind="var" path="M2_REPO/com/fasterxml/jackson/core/jackson-core/2.9.6/jackson-core-2.9.6.jar"/>
-  <classpathentry kind="var" path="M2_REPO/com/couchbase/client/encryption/1.0.0/encryption-1.0.0.jar"/>
+  <classpathentry kind="var" path="M2_REPO/com/fasterxml/jackson/datatype/jackson-datatype-jdk8/2.9.6/jackson-datatype-jdk8-2.9.6.jar"/>
+  <classpathentry kind="var" path="M2_REPO/com/fasterxml/jackson/datatype/jackson-datatype-jsr310/2.9.6/jackson-datatype-jsr310-2.9.6.jar"/>
+  <classpathentry kind="var" path="M2_REPO/com/fasterxml/jackson/module/jackson-module-parameter-names/2.9.6/jackson-module-parameter-names-2.9.6.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/springframework/boot/spring-boot-starter-web/2.1.0.M1/spring-boot-starter-web-2.1.0.M1.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/springframework/boot/spring-boot-starter-tomcat/2.1.0.M1/spring-boot-starter-tomcat-2.1.0.M1.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/apache/tomcat/embed/tomcat-embed-core/9.0.10/tomcat-embed-core-9.0.10.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/apache/tomcat/embed/tomcat-embed-el/9.0.10/tomcat-embed-el-9.0.10.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/apache/tomcat/embed/tomcat-embed-websocket/9.0.10/tomcat-embed-websocket-9.0.10.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/hibernate/validator/hibernate-validator/6.0.11.Final/hibernate-validator-6.0.11.Final.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/springframework/spring-webmvc/5.1.0.RC1/spring-webmvc-5.1.0.RC1.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/springframework/data/spring-data-rest-webmvc/3.1.0.RC1/spring-data-rest-webmvc-3.1.0.RC1.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/springframework/data/spring-data-rest-core/3.1.0.RC1/spring-data-rest-core-3.1.0.RC1.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/springframework/hateoas/spring-hateoas/0.25.0.RELEASE/spring-hateoas-0.25.0.RELEASE.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/springframework/plugin/spring-plugin-core/1.2.0.RELEASE/spring-plugin-core-1.2.0.RELEASE.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/atteo/evo-inflector/1.2.2/evo-inflector-1.2.2.jar"/>
+  <classpathentry kind="var" path="M2_REPO/com/h2database/h2/1.4.197/h2-1.4.197.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/springframework/boot/spring-boot-starter-test/2.1.0.M1/spring-boot-starter-test-2.1.0.M1.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/springframework/boot/spring-boot-test/2.1.0.M1/spring-boot-test-2.1.0.M1.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/springframework/boot/spring-boot-test-autoconfigure/2.1.0.M1/spring-boot-test-autoconfigure-2.1.0.M1.jar"/>
@@ -47,7 +80,6 @@
   <classpathentry kind="var" path="M2_REPO/org/hamcrest/hamcrest-core/1.3/hamcrest-core-1.3.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/assertj/assertj-core/3.10.0/assertj-core-3.10.0.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/mockito/mockito-core/2.19.1/mockito-core-2.19.1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/net/bytebuddy/byte-buddy/1.8.13/byte-buddy-1.8.13.jar"/>
   <classpathentry kind="var" path="M2_REPO/net/bytebuddy/byte-buddy-agent/1.8.13/byte-buddy-agent-1.8.13.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/objenesis/objenesis/2.6/objenesis-2.6.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/hamcrest/hamcrest-library/1.3/hamcrest-library-1.3.jar"/>
@@ -55,17 +87,4 @@
   <classpathentry kind="var" path="M2_REPO/com/vaadin/external/google/android-json/0.0.20131108.vaadin1/android-json-0.0.20131108.vaadin1.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/springframework/spring-test/5.1.0.RC1/spring-test-5.1.0.RC1.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/xmlunit/xmlunit-core/2.6.0/xmlunit-core-2.6.0.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/springframework/boot/spring-boot-starter-web/2.1.0.M1/spring-boot-starter-web-2.1.0.M1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/springframework/boot/spring-boot-starter-json/2.1.0.M1/spring-boot-starter-json-2.1.0.M1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/com/fasterxml/jackson/datatype/jackson-datatype-jdk8/2.9.6/jackson-datatype-jdk8-2.9.6.jar"/>
-  <classpathentry kind="var" path="M2_REPO/com/fasterxml/jackson/datatype/jackson-datatype-jsr310/2.9.6/jackson-datatype-jsr310-2.9.6.jar"/>
-  <classpathentry kind="var" path="M2_REPO/com/fasterxml/jackson/module/jackson-module-parameter-names/2.9.6/jackson-module-parameter-names-2.9.6.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/springframework/boot/spring-boot-starter-tomcat/2.1.0.M1/spring-boot-starter-tomcat-2.1.0.M1.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/apache/tomcat/embed/tomcat-embed-core/9.0.10/tomcat-embed-core-9.0.10.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/apache/tomcat/embed/tomcat-embed-el/9.0.10/tomcat-embed-el-9.0.10.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/apache/tomcat/embed/tomcat-embed-websocket/9.0.10/tomcat-embed-websocket-9.0.10.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/hibernate/validator/hibernate-validator/6.0.11.Final/hibernate-validator-6.0.11.Final.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/jboss/logging/jboss-logging/3.3.2.Final/jboss-logging-3.3.2.Final.jar"/>
-  <classpathentry kind="var" path="M2_REPO/com/fasterxml/classmate/1.3.4/classmate-1.3.4.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/springframework/spring-webmvc/5.1.0.RC1/spring-webmvc-5.1.0.RC1.jar"/>
 </classpath>
